--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
     </div>
 
     <div class="first-container">
+        <div class="text">
         <h3>This website is awesome</h3>
-        <div class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button>Sign up</button>    
+        </div>
         <img src="./surf.png"></img>
-        <button>Sign up</button>
     </div>
-    <div class="title"></div> Some random Information </div>
     <div class="second-container">
+        <div class="title">Some random Information </div>
+        <div class="images">
         <div class="info">
         <img src="./surfing.png"></img>
         <div class="text">Surfing</div>
@@ -42,17 +45,20 @@
             <div class="text">Swimming</div>
             </div>    
     </div>
+    </div>
     <div class="third-container">
         <div class="quote">Dance with the waves, move with the sea. Let the rhythm of the water set your soul free. – Christy Ann Martine</div>
     </div>
     <div class="fourth-container">    
         <div class="action">
+            <div class="action-text">
             <p>Call to action</p>
             <p>Sign up to our newsletter!</p>
             </div>
         <button>Sign up</button>
     </div>
+</div>
 
-    <div class="foother">Copyright © The Odin's Project 2023</div>
+    <div class="footer">Copyright © The Odin's Project 2023</div>
   </body>
   </html>
