--- a/index.html
+++ b/index.html
@@ -25,38 +25,48 @@
         </div>
         <img src="./surf.png"></img>
     </div>
+
     <div class="second-container">
         <div class="title">Some random Information </div>
+
         <div class="images">
+
         <div class="info">
         <img src="./surfing.png"></img>
         <div class="text">Surfing</div>
         </div>
+
         <div class="info">
             <img src="./windsurfing.png"></img>
             <div class="text">Windsurfing</div>
-            </div>
+        </div>
+
         <div class="info">
         <img src="./paddleboarding.png"></img>
         <div class="text">Paddleboarding</div>
         </div>
+
         <div class="info">
             <img src="./swimming.png"></img>
             <div class="text">Swimming</div>
-            </div>    
+        </div>    
     </div>
     </div>
+
     <div class="third-container">
-        <div class="quote">Dance with the waves, move with the sea. Let the rhythm of the water set your soul free. – Christy Ann Martine</div>
+        <div class="quote">
+            <p>Dance with the waves, move with the sea. Let the rhythm of the water set your soul free.</p>
+            <b>– Christy Ann Martine</b>
+            </div>
     </div>
-    <div class="fourth-container">    
         <div class="action">
             <div class="action-text">
-            <p>Call to action</p>
+            <h4>Call to action</h4>
             <p>Sign up to our newsletter!</p>
             </div>
+            <div class="button">
         <button>Sign up</button>
-    </div>
+        </div>
 </div>
 
     <div class="footer">Copyright © The Odin's Project 2023</div>
